# rtm-ethics-kernel

./: LICENSE  README.md  ingest_logs.py  pyproject.toml  requirements.txt  rtm_ethics_module.py  rtm_ethics_schema.py
.github/workflows/: ci.yml
docs/: 00-Overview.md  01-Architecture.md  02-Invariants.md  03-Sessions-Index.md
sessions/: .gitkeep  claude full combo 1.docx  claude full combo 2.docx  gpt rtm ethics integration full combo.docx  grok full combo.docx  grok last cupple from full combo.docx
tests/: test_rtm_ethics_properties.py
